feat: Use getResourcesAsStream for retrieve data + cleaning